we need to: 1) send the external address (as viewed by other connections) in hits when marking FWTransfer support 2) send the external address (as viewed by other connections) in our push proxy request (which will be transferred to the pushrequest)
NEED TO TEST!!!

--- a/components/gnutella-core/src/test/jdk14.logging.properties
+++ b/components/gnutella-core/src/test/jdk14.logging.properties
@@ -46,5 +46,5 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 #com.limegroup.gnutella.downloader.level=ALL
 #com.limegroup.gnutella.UploadManager.level=ALL
 #com.limegroup.gnutella.uploader.level=ALL
-com.limegroup.gnutella.udpconnect.level=ALL
+#com.limegroup.gnutella.udpconnect.level=ALL
 
