changed eff link.

--- a/lib/messagebundles/totd/TOTD.properties
+++ b/lib/messagebundles/totd/TOTD.properties
@@ -35,7 +35,7 @@ GENERAL_25=You can preview downloaded files to make sure they're what you expect
 GENERAL_27=Curious what hosts LimeWire is connecting or connected to? Enable the Connections tab from View -> Show/Hide, and take a look at LimeWire's connections.
 GENERAL_28=You can chat other people who are running LimeWire. Choose any download or search result that has a smiley in the Chat column and then click Chat.
 GENERAL_29=Sometimes the 'search' button is disabled. This happens when LimeWire is not connected to any other hosts. Choose File -> Connect and wait for the bar in the bottom-left corner to fill up.
-GENERAL_30=Passionate about digital rights? Visit the <a href="http://eff.org">Electronic Frontier Foundation</a> and see what you can do to help.
+GENERAL_30=Passionate about digital rights? Visit the <a href="http://www.limewire.com/eff">Electronic Frontier Foundation</a> and see what you can do to help.
 GENERAL_31=LimeWire is translated into dozens of <a href="http://www.limewire.com/english/content/international.shtml">different languages</a> including Chinese, French, German, Japanese, Italian, Spanish and many many more. Visit LimeWire's <a href="http://www.limewire.org/project/www/translate.html">internationalization page</a> for information on how you can help translation efforts!
 GENERAL_32=Can't find files you've downloaded? Try doing a search on your computer for the filename. LimeWire will only list files that are being shared or are incomplete within its Library, so if your Save directory isn't shared, LimeWire won't display it.
 GENERAL_33=Sport the LimeWire look! Visit our <a href="http://www.limewire.com/english/content/gear.shtml">LimeWire gear</a> page and purchase a t-shirt or hat! 
