added ability to run a single testcase from the commandline.

--- a/components/gnutella-core/src/test/build.xml
+++ b/components/gnutella-core/src/test/build.xml
@@ -215,6 +215,7 @@
         
             <jvmarg value="-Djava.library.path=${native}"/>
             <jvmarg value="-Djava.util.logging.config.file=${log.properties}"/>
+            <jvmarg value="-Djunit.test.method=${method}"/>
             <classpath refid="default.classpath" />
             
             <formatter type="xml" />
