up some timeouts,logging

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -43,6 +43,7 @@ log4j.appender.A1.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 # log4j.logger.httpclient.wire=ALL
 # will log all information read/written from/to the network using HttpClient
 #log4j.logger.com.limegroup.gnutella.search.SearchResultHandler.level=DEBUG
+#log4j.logger.com.limegroup.gnutella.altlocs=ALL
 #log4j.logger.com.limegroup.gnutella.Connection=ALL
 #log4j.logger.com.limegroup.gnutella.gui=DEBUG
 #log4j.logger.com.limegroup.gnutella.gui.iTunesMediator=DEBUG
@@ -67,3 +68,6 @@ log4j.appender.A1.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.gui.mp3=ALL
 #log4j.logger.com.limegroup.gnutella.search=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
+#log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
+
+
