--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -55,7 +55,7 @@ log4j.appender.A1.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.bootstrap=ALL
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=OFF
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
 #log4j.logger.com.limegroup.gnutella.dime=ALL
