more tests for the uploader side of push locs

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -6,18 +6,77 @@
 # Valid thresholds can be:
 # OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL 
 
+#
+# The default logger that is used prints out log statements
+# on the console.  If you want those redirected to a file,
+# enable TextFile logger.  If you want those stored in an xml
+# format (either for chainsaw or for inclusing in xml documents)
+# use the XMLFile logger.  If you want to use chainsaw to watch
+# the logs of a running application use the "socket" logger
+
 ########
+
 # Set the root loggers
-log4j.rootLogger=OFF, A1
+log4j.rootLogger=OFF, stdout, TextFile, XMLFile,socket
 
-# The root logger uses the appenders called A1 and A2. 
-# The default level for these loggers is OFF.
 
-# A1 is set to be ConsoleAppender sending its output to System.out
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
+######
+#  The TextFile logger
+# if you want to enable logging to file in standard format:
+# 1. comment out the first line
+# 2. uncomment/edit the other lines
+# to disable this type of logging do the oppposite.
 
-# A1 uses PatternLayout.
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.TextFile=org.apache.log4j.varia.NullAppender
+#log4j.appender.TextFile=org.apache.log4j.RollingFileAppender
+#log4j.appender.TextFile.File=log.txt
+#log4j.appender.TextFile.MaxFileSize=50MB
+#log4j.appender.TextFile.MaxBackupIndex=5
+#log4j.appender.TextFile.layout=org.apache.log4j.PatternLayout
+#log4j.appender.TextFile.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
+#log4j.appender.TextFile.ImmediateFlush=true
+########
+
+
+######
+# The XMLFile logger
+# if you want to enable logging to XML file for the chainsaw viwer:
+# 1. comment out the first line
+# 2. uncomment/edit the other lines
+# to disable this type of logging do the oppposite.
+
+log4j.appender.XMLFile=org.apache.log4j.varia.NullAppender
+#log4j.appender.XMLFile=org.apache.log4j.RollingFileAppender
+#log4j.appender.XMLFile.File=log.xml
+#log4j.appender.XMLFile.MaxFileSize=100MB
+#log4j.appender.XMLFile.MaxBackupIndex=5
+#log4j.appender.XMLFile.layout=org.apache.log4j.xml.XMLLayout
+#log4j.appender.XMLFile.layout.LocationInfo=true
+#log4j.appender.XMLFile.ImmediateFlush=false
+#####
+
+
+
+#########
+# The "socket" logger
+# If you want to use the Chainsaw viewer on a running program:
+# 1. comment out the first line
+# 2. uncomment/edit the other lines
+# to disable this type of logging do the oppposite.
+# Make sure the viewer is running before starting limewire!
+
+log4j.appender.socket=org.apache.log4j.varia.NullAppender
+#log4j.appender.socket=org.apache.log4j.net.SocketAppender
+#log4j.appender.socket.RemoteHost=localhost
+#log4j.appender.socket.port=4445
+#log4j.appender.socket.LocationInfo=true
+#########
+
+# stdout is set to be ConsoleAppender sending its output to System.out
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+
+# stdout uses PatternLayout.
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # The conversion pattern is:
 # time elapsed since start of logging (left justified, pads extra spaces if less than 0)
@@ -27,7 +86,8 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # - message
 # newline
 
-log4j.appender.A1.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
+
 
 ###  To set the value for specific classes/packages, use the following format:
 ## log4j.logger.<package.class>=LEVEL
@@ -42,8 +102,8 @@ log4j.appender.A1.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #
 # log4j.logger.httpclient.wire=ALL
 # will log all information read/written from/to the network using HttpClient
+
 #log4j.logger.com.limegroup.gnutella.search.SearchResultHandler.level=DEBUG
-#log4j.logger.com.limegroup.gnutella.altlocs=ALL
 #log4j.logger.com.limegroup.gnutella.Connection=ALL
 #log4j.logger.com.limegroup.gnutella.gui=DEBUG
 #log4j.logger.com.limegroup.gnutella.gui.iTunesMediator=DEBUG
@@ -56,7 +116,7 @@ log4j.appender.A1.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.bootstrap=ALL
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
 #log4j.logger.com.limegroup.gnutella.dime=ALL
@@ -67,7 +127,3 @@ log4j.appender.A1.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.gui.Initializer=ALL
 #log4j.logger.com.limegroup.gnutella.gui.mp3=ALL
 #log4j.logger.com.limegroup.gnutella.search=ALL
-#log4j.logger.com.limegroup.gnutella.downloader=ALL
-#log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
-
-
