updated tests for PE and HeadPongs

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -104,6 +104,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 # will log all information read/written from/to the network using HttpClient
 
 #log4j.logger.com.limegroup.gnutella.search.SearchResultHandler.level=DEBUG
+#log4j.logger.com.limegroup.gnutella.messages.vendor.HeadPong=All
 #log4j.logger.com.limegroup.gnutella.Connection=ALL
 #log4j.logger.com.limegroup.gnutella.gui=DEBUG
 #log4j.logger.com.limegroup.gnutella.gui.iTunesMediator=DEBUG
