--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -28,13 +28,13 @@ log4j.rootLogger=OFF, stdout, TextFile, XMLFile,socket
 # to disable this type of logging do the oppposite.
 
 log4j.appender.TextFile=org.apache.log4j.varia.NullAppender
-#log4j.appender.TextFile=org.apache.log4j.RollingFileAppender
-#log4j.appender.TextFile.File=log.txt
-#log4j.appender.TextFile.MaxFileSize=50MB
-#log4j.appender.TextFile.MaxBackupIndex=5
-#log4j.appender.TextFile.layout=org.apache.log4j.PatternLayout
-#log4j.appender.TextFile.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
-#log4j.appender.TextFile.ImmediateFlush=true
+log4j.appender.TextFile=org.apache.log4j.RollingFileAppender
+log4j.appender.TextFile.File=log.txt
+log4j.appender.TextFile.MaxFileSize=50MB
+log4j.appender.TextFile.MaxBackupIndex=5
+log4j.appender.TextFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.TextFile.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
+log4j.appender.TextFile.ImmediateFlush=true
 ########
 
 
@@ -130,4 +130,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.search=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.udpconnect=ALL
-
+#log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
+#log4j.logger.com.limegroup.gnutella.UDPService=ALL
+log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
