--- a/lib/messagebundles/totd/TOTD.properties
+++ b/lib/messagebundles/totd/TOTD.properties
@@ -7,10 +7,10 @@
 # GENERAL TIPS THAT ARE SHOWN ON ALL OPERATING SYSTEMS
 #####################################################################################
 GENERAL_1=Tired of downloads stopping halfway through? It helps to pick search results that have a higher number in the '#' column. The # is the amount of unique places on the network that are hosting the file. The more sources, the better the chance of getting your file!
-GENERAL_2=When your downloads say 'Needs More Sources', try choosing that download and then clicking the 'Find More Sources' button. LimeWire will search the network for more places to download the file and automatically resume downloading if it finds any matches.
+GENERAL_2=When your downloads say 'Needs More Sources', try choosing that download and then clicking 'Find More Sources'. LimeWire will search the network for more places to download the file and automatically resume downloading if it finds any matches.
 #GENERAL_3 not used -- migrated to OSX & NOT_OSX.
 GENERAL_4=When LimeWire starts up it has to search the network for other clients to connect to. During this connecting time, the bar in the bottom-left corner will light green. When all bars are green (or blue!), that means LimeWire has found stable connections.
-GENERAL_5=You can change the look and feel of LimeWire by going to View -> Apply Skins and choosing a new skin. Brand new skins are on LimeWire's website, available by choosing 'Get More Skins'. If you download skin using the "magnet" links, they'll download within LimeWire and LimeWire will automatically ask if you want to use the new skin when the download completes.
+GENERAL_5=You can change the look and feel of LimeWire by going to View -> Apply Skins and choosing a new skin. Brand new skins are on LimeWire's website, available by choosing 'Get More Skins'. If you download skins by the "Download into LimeWire" links, LimeWire will automatically ask if you want to use the new skin when the download completes.
 GENERAL_6=You can sort your search results by clicking on a column. The most useful column to sort by is the '#' column, which can put the results that have the highest chance of downloading at the top of the list.
 #GENERAL_7 not used -- migrated to OSX & NOT_OSX.
 GENERAL_8=The more stars a search result has, the better the chances of the download completing successfully! Some search results may even appear with four blue stars and a speed of 'Ethernet'. These results have the greatest chance of completing successfully.
@@ -25,10 +25,10 @@ GENERAL_16=Need more help? Visit <a href="http://www.limewire.com/forum.htm">our
 GENERAL_17=Accidentally killed your download? Click the library tab, choose the Incomplete folder, and then highlight the filename of the file you'd like to resume downloading and click resume. LimeWire will automatically search for that file and begin downloading it again.
 GENERAL_18=Do you have a tip for effectively using LimeWire? Mail it to totd@limewire.com and it may make it into future Tips of the Day!
 #GENERAL_19 unused -- migrated to OSX & NOT_OSX.
-GENERAL_20=Sometimes the 'search' button is disabled. This happens when LimeWire is not connected to any other hosts. Choose File -> Connect and wait for the light in the bottom left to glow a steady green.
+#GENERAL_20 unused -- was duplicated as GENERAL_29
 GENERAL_21=You can restart downloads that say 'Awaiting Sources' by searching for that file again. LimeWire will automatically restart the download if it finds any matching results.
 GENERAL_22=Do you have a cool feature you'd like to see added to LimeWire? Suggest it on LimeWire's <a href="http://www.limewire.com/forum.htm">message boards</a> and it may be added to future versions!
-GENERAL_23=You can make your own LimeWire skins! Visit <a href="http://www.limewire.com/makeskins">LimeWire's website</a> for detailed information about how skins are created.
+GENERAL_23=You can make your own LimeWire skins! Visit <a href="http://www.limewire.com/english/content/makeskins.shtml">LimeWire's website</a> for detailed information about how skins are created.
 GENERAL_24=Want to know more about the development of LimeWire? Visit <a href="http://www.limewire.org">LimeWire's open-source website</a> and look around!
 GENERAL_25=You can preview downloaded files to make sure they're what you expect. Just select the download and click launch!
 #GENERAL_26 unused -- migrated to OSX & NOT_OSX.
@@ -36,11 +36,12 @@ GENERAL_27=Curious what hosts LimeWire is connecting or connected to? Enable the
 GENERAL_28=You can chat other people who are running LimeWire. Choose any download or search result that has a smiley in the Chat column and then click Chat.
 GENERAL_29=Sometimes the 'search' button is disabled. This happens when LimeWire is not connected to any other hosts. Choose File -> Connect and wait for the bar in the bottom-left corner to fill up.
 GENERAL_30=Passionate about digital rights? Visit the <a href="http://www.limewire.com/eff">Electronic Frontier Foundation</a> and see what you can do to help.
-GENERAL_31=LimeWire is translated into dozens of <a href="http://www.limewire.com/english/content/international.shtml">different languages</a> including Chinese, French, German, Japanese, Italian, Spanish and many many more. Visit LimeWire's <a href="http://www.limewire.org/project/www/translate.html">internationalization page</a> for information on how you can help translation efforts!
+GENERAL_31=LimeWire is translated into dozens of <a href="http://www.limewire.com/english/content/international.shtml">different languages</a> including Chinese, French, German, Japanese, Italian, Spanish and many many more. Visit LimeWire's <a href="http://www.limewire.org/translate.shtml">internationalization page</a> for information on how you can help translation efforts!
 GENERAL_32=Can't find files you've downloaded? Try doing a search on your computer for the filename. LimeWire will only list files that are being shared or are incomplete within its Library, so if your Save directory isn't shared, LimeWire won't display it.
 GENERAL_33=Sport the LimeWire look! Visit our <a href="http://www.limewire.com/english/content/gear.shtml">LimeWire gear</a> page and purchase a t-shirt or hat! 
 GENERAL_34=Want to publish your own content? <a href="http://www.magnetmix.com">LimeWire's MagnetMix</a> offers independent artists, shareware games, software distributors and more a way to reach large audiences. <a href="http://www.magnetmix.com/form.html">Submit your content</a> today!
 GENERAL_35=Try an audio genre search!<br>Click on the 'Audio' Metadata search window, choose a genre from the drop-down box, and then press Search. Most if not all of the files returned will be from the selected genre.
+GENERAL_36=Don't know what to look for?  Try a "What's New" search and see what's recently been added to the network.
 
 #####################################################################################
 # TIPS FOR NON-OSX Machines (Useful for tips that reference the About Window or the Preferences Window, or right-clicking)
@@ -54,10 +55,11 @@ NOT_OSX_6=Frequently see 'Could Not Move To Library' on downloads? You can fix t
 NOT_OSX_7=You can turn autocomplete for searching on or off by choosing 'Options' from the 'Tools' menu, and changing the value of 'Autocomplete Text' under the 'View' option.
 NOT_OSX_8=Want to see dialogs for questions which you previously marked 'Do not display this message again' or 'Always Use This Answer'? Go to Tools -> Options, and check 'Revert To Default' under View -> Popups.
 NOT_OSX_9=You can ban certain words from appearing in your search results by choosing 'Options' from the 'Tools' menu and adding new words to those listed under Filters -> Keywords.
-NOT_OSX_10=You can change the columns that display search result information. Columns you can choose from include, 'Title', 'Genre', 'Track', 'Length', and many more. Just right-click on the search result column headers, choose audio or video, and check the columns you want to see!
+NOT_OSX_10=You can change the columns that display search result information. Columns you can choose include, 'Title', 'Genre', 'Track', 'Length', and many more. Just right-click on the search result column headers, choose audio or video, and check the columns you want to see!
 NOT_OSX_11=Hate tooltips? Love tooltips? You can turn them on or off in most tables by right-clicking on the column headers and choosing 'More Options'. You can toggle other options here too, like whether or not to sort tables automatically and if you want the rows to be striped.
 NOT_OSX_12=You can sort uploads, downloads, etc..., by clicking on a column. The table keeps resorting as the information changes. You can turn this automatic-sorting behavior off by right-clicking on a column header, choosing 'More Options' and un-checking 'Sort Automatically'.
 NOT_OSX_13=Don't want to see the Chat (or other) columns in downloads? Right-click on the column headers and uncheck that column. You can also drag the columns around to make them appear in the order you'd like.
+NOT_OSX_14=You can tell LimeWire which downloads to start next.  Right-click on the column headers in the download area and check the 'Priority' column.  Select the download you want to start next and click the up arrow until it's at the top!
 
 #####################################################################################
 # TIPS FOR OSX
@@ -79,16 +81,12 @@ OSX_14=You can change the columns that display search result information. Column
 OSX_15=Hate tooltips? Love tooltips? You can turn them on or off in most tables by control-clicking on the column headers and choosing 'More Options'. You can toggle other options here too, like whether or not to sort tables automatically and if you want the rows to be striped.
 OSX_16=You can sort uploads, downloads, etc..., by clicking on a column. The table keeps resorting as the information changes. You can turn this automatic-sorting behavior off by control-clicking on a column header, choosing 'More Options' and un-checking 'Sort Automatically'.
 OSX_17=Don't want to see the Chat (or other) columns in downloads? Control-click on the column headers and uncheck that column. You can also drag the columns around to make them appear in the order you'd like.
+NOT_OSX_14=You can tell LimeWire which downloads to start next.  Control-click on the column headers in the download area and check the 'Priority' column.  Select the download you want to start next and click the up arrow until it's at the top!
 
 #####################################################################################
 # TIPS FOR NON MAC CLASSIC (Useful for tips that reference Java2 specific features like Advanced Stats)
 #####################################################################################
 NOT_MAC_CLASSIC_1=Want to know more detailed information about the inner workings of LimeWire? You can view the same statistics that the developers use by choosing Tools -> Statistics, choosing 'Advanced', and opting to view Advanced Statistics.
-
-#####################################################################################
-# TIPS FOR MAC CLASSIC
-#####################################################################################
-#MAC_CLASSIC_1=Thank you for supporting LimeWire!
 
 #####################################################################################
 # TIPS FOR WINDOWS
