Change primarily for adding support for icons in column headers.
Also fixes:
- AboutWindow's content (adding Katie, removing others, and
  synchronizing across locales).
- Jens-Uwe Mager's patch for disabling two recently-added
  message boxes.
- Fixed some improper capitalization in the menu.
- Removed superfluous ellipses in the menu.
- Properly capitalized "LimeWire PRO" in some TOTD items.

--- a/lib/messagebundles/totd/TOTD.properties
+++ b/lib/messagebundles/totd/TOTD.properties
@@ -9,7 +9,7 @@
 GENERAL_1=Tired of downloads stopping halfway through? It helps to pick search results that have a higher number in the '#' column. The # is the amount of unique places on the network that are hosting the file. The more sources, the better the chance of getting your file!
 GENERAL_2=When your downloads say 'Needs More Sources', try choosing that download and then clicking 'Find More Sources'. LimeWire will search the network for more places to download the file and automatically resume downloading if it finds any matches.
 #GENERAL_3 not used -- migrated to OSX & NOT_OSX.
-GENERAL_4=When LimeWire starts up it has to search the network for other clients to connect to. During this connecting time, the bar in the bottom-left corner will light green. When all bars are green (or blue!), that means LimeWire has found stable connections.
+GENERAL_4=When LimeWire starts up it has to connect to the network.  During this time, the bar in the bottom-left corner will change colors.  Once all bars are green (or blue!), LimeWire has completely connected.
 GENERAL_5=You can change the look and feel of LimeWire by going to View -> Apply Skins and choosing a new skin. Brand new skins are on LimeWire's website, available by choosing 'Get More Skins'. If you download skins by the "Download into LimeWire" links, LimeWire will automatically ask if you want to use the new skin when the download completes.
 GENERAL_6=You can sort your search results by clicking on a column. The most useful column to sort by is the '#' column, which can put the results that have the highest chance of downloading at the top of the list.
 #GENERAL_7 not used -- migrated to OSX & NOT_OSX.
@@ -108,9 +108,9 @@ OTHER_1=Did you know LimeWire is completely open-source? Visit <a href="http://w
 #####################################################################################
 # TIPS FOR PRO
 #####################################################################################
-PRO_1=Thank you for supporting LimeWire! We hope you enjoy LimeWire Pro.
+PRO_1=Thank you for supporting LimeWire! We hope you enjoy LimeWire PRO.
 
 #####################################################################################
 # TIPS FOR POOR
 #####################################################################################
-FREE_1=Thank you for helping the network by running LimeWire. Please consider upgrading to <a href="http://www.limewire.com/index.jsp/pro">LimeWire Pro</a> to help support our ongoing development to make LimeWire and the network even better.
+FREE_1=Thank you for helping the network by running LimeWire. Please consider upgrading to <a href="http://www.limewire.com/index.jsp/pro">LimeWire PRO</a> to help support our ongoing development to make LimeWire and the network even better.
