--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -135,3 +135,4 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
+log4j.logger.com.limegroup.gnutella.xml=ALL
