--- a/components/gnutella-core/build.xml
+++ b/components/gnutella-core/build.xml
@@ -53,6 +53,8 @@
 		   srcdir="${basedir}" 
            destdir="${basedir}"
            nowarn="${NOWARN}"
+      source="1.3"
+      target="1.3"
     >
     <classpath refid="default.classpath" />
     </javac>
