--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -140,3 +140,4 @@ log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
 #log4j.logger.com.limegroup.gnutella.security=ALL
 #log4j.logger.com.limegroup.gnutella.BrowseHostHandler=ALL
+log4j.logger.com.limegroup.gnutella.licenses=ALL
