Lotsa changes.  Updated schema-parsing code to have a concept of 'editable' and name vs values for enumerations.  For searching, combo boxes display the name but use the value (except for the standard query, which uses the name).  When editing (using the advanced editor), non-editable values aren't displayed.  Fixed pretty editor to not drop values that aren't mirrored in text-boxes or comboboxes.  Updated advanced editor to not drop non-editable values.  Added 'ComboBoxValue' to handle the gui side of combo-box changes.  Changed 'license type' field to 'licensetype' since XML didn't like attributes with spaces.

--- a/lib/messagebundles/xml/display/audio.properties
+++ b/lib/messagebundles/xml/display/audio.properties
@@ -14,3 +14,4 @@ audios__audio__price__    = Price
 audios__audio__link__     = Link
 audios__audio__comments__ = Comments
 audios__audio__action__ = Action^10
+audios__audio__licensetype__ = License Type
