add test for retrieving license details from different server.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -114,7 +114,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.ConnectionWatchdog=ALL
 #log4j.logger.com.limegroup.gnutella.connection.ConnectionChecker=ALL
 #log4j.logger.com.limegroup.gnutella.BrowseHostHandler=ALL
-#log4j.logger.com.limegroup.gnutella.bootstrap=ALL
+log4j.logger.com.limegroup.gnutella.bootstrap=ALL
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
