Added enumerated constants for WinXP SP2 ICF errors & various statuses

--- a/components/gnutella-core/native/windows/WindowsV5PlusUtils/WindowsV5PlusUtils.vcproj
+++ b/components/gnutella-core/native/windows/WindowsV5PlusUtils/WindowsV5PlusUtils.vcproj
@@ -115,6 +115,9 @@
 		<File
 			RelativePath=".\WindowsV5PlusUtils.cpp">
 		</File>
+		<File
+			RelativePath=".\WindowsV5PlusUtils.h">
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
