re-arrange jars & whatnot to make building installers more automated.

--- a/components/gnutella-core/build.xml
+++ b/components/gnutella-core/build.xml
@@ -15,8 +15,7 @@
 <!-- default classpath for javac.  it is set as the user's CLASSPATH
      environment with the jar files necessary for compilation appended. -->
 <path id="default.classpath" >
-  <fileset dir="${jars}" includes="*.jar"/>
-  <pathelement location="../chord" />
+  <fileset dir="${jars}" includes="**/*.jar"/>
 </path>
 
 
