--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -136,6 +136,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.IncompleteFileManager=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
