fix most download tests, remove some irrelevant ones

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -116,8 +116,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.BrowseHostHandler=ALL
 #log4j.logger.com.limegroup.gnutella.bootstrap=ALL
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
-log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ERROR
-log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
@@ -135,11 +135,11 @@ log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
-log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.IncompleteFileManager=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
-log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
 #log4j.logger.com.limegroup.gnutella.security=ALL
