--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -124,7 +124,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.dime=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree.HashTree=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
+log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.SavedFileManager=ALL
 #log4j.logger.com.limegroup.gnutella.RouterService=ALL
 #log4j.logger.com.limegroup.gnutella.gui.Initializer=ALL
