--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -140,4 +140,5 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.xml=ALL
 #log4j.logger.com.limegroup.gnutella.UPnPManager=ALL
 #log4j.logger.com.limegroup.gnutella.version=ALL
-log4j.logger.com.limegroup.gnutella.io.NIOSocket=ALL
+log4j.logger.com.limegroup.gnutella.io=ALL
+#log4j.logger.com.limegroup.gnutella.io.NIOSocket=ALL
