--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -130,7 +130,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.gui.Initializer=ALL
 #log4j.logger.com.limegroup.gnutella.gui.mp3=ALL
 #log4j.logger.com.limegroup.gnutella.search=ALL
-#log4j.logger.com.limegroup.gnutella.downloader=ALL
+log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.udpconnect=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
@@ -140,5 +140,6 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
-#log4j.logger.com.limegroup.gnutella.settings=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
+log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
+#log4j.logger.com.limegroup.gnutella.settings=ALL
