fix some tests.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -142,7 +142,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
-#log4j.logger.com.limegroup.gnutella.io=ALL
+log4j.logger.com.limegroup.gnutella.io=ALL
 #log4j.logger.com.limegroup.gnutella.xml=ALL
 #log4j.logger.com.limegroup.gnutella.UPnPManager=ALL
 #log4j.logger.com.limegroup.gnutella.version=ALL
