Move ASF parsing into ASFParser, add wrapper WMAMetaData & WMVMetaData.  Add support for ASF & WM, add support for filetypes which can be multiple kinds of metadata (audio or video).  Cleanup VideoMetaData, cleanup LimeXMLReplyCollection, cleanup tests.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -145,3 +145,4 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
+log4j.logger.com.limegroup.gnutella.xml.LimeXMLReplyCollection=ALL
