--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -140,7 +140,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
+log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
