--- a/lib/messagebundles/xml/display/audio.properties
+++ b/lib/messagebundles/xml/display/audio.properties
@@ -8,10 +8,8 @@ audios__audio__type__     = Type
 audios__audio__seconds__  = Length^20
 audios__audio__year__     = Year^20
 audios__audio__language__ = Language
-audios__audio__SHA1__     = Hash^10
 audios__audio__bitrate__  = Bitrate^20
-audios__audio__price__    = Price
-audios__audio__link__     = Link
 audios__audio__comments__ = Comments
-audios__audio__action__ = Action^10
+audios__audio__action__   = Action^10
+audios__audio__license__  = Copyright
 audios__audio__licensetype__ = License Type
