cleaned up xml -> resource string code.

--- a/lib/messagebundles/xml/display/property.properties
+++ b/lib/messagebundles/xml/display/property.properties
@@ -48,4 +48,4 @@ properties__property__city__               = City
 properties__property__zip__                = Zip
 properties__property__state__              = State
 properties__property__country__            = Country
-properties__property__action__             = Action^10
+properties__property__action__             = Action
