--- a/lib/messagebundles/xml/display/radioStation.properties
+++ b/lib/messagebundles/xml/display/radioStation.properties
@@ -16,4 +16,4 @@ radioStations__radioStation__description__ = Description
 radioStations__radioStation__comments__    = Comments
 radioStations__radioStation__image__       = Image
 radioStations__radioStation__link__        = Link
-radioStations__radioStation__ = Action^10
+radioStations__radioStation__ = Action
