--- a/lib/messagebundles/xml/display/story.properties
+++ b/lib/messagebundles/xml/display/story.properties
@@ -1,11 +1,11 @@
 stories__story               = Story
-stories__story__title__      = Title^60
-stories__story__time__       = Date/Time^40
-stories__story__author__     = Author^40
-stories__story__department__ = Department^40
-stories__story__topic__      = Topic^60
-stories__story__section__    = Section^60
-stories__story__url__        = Link^60
-stories__story__image__      = Image^60
-stories__story__comments__   = Comments^60
-stories__story__action__ = Action^10
+stories__story__title__      = Title
+stories__story__time__       = Date/Time
+stories__story__author__     = Author
+stories__story__department__ = Department
+stories__story__topic__      = Topic
+stories__story__section__    = Section
+stories__story__url__        = Link
+stories__story__image__      = Image
+stories__story__comments__   = Comments
+stories__story__action__ = Action
