- Can now Share and Stop Sharing on individual files, even for normally shared directories - Cleaned up FileManager internals:   - Removed updateSharedFiles   - Streamlined all add*File* calls   - Added new method stopSharingFile   - Fixed rename to pay attention to special files   - Added method to check if a given file is currently shared   - Revamped isFileShareable and isFilePhysicallyShareable

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -126,6 +126,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.tigertree.HashTree=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.SavedFileManager=ALL
+#log4j.logger.com.limegroup.gnutella.FileManager=ALL
 #log4j.logger.com.limegroup.gnutella.RouterService=ALL
 #log4j.logger.com.limegroup.gnutella.gui.Initializer=ALL
 #log4j.logger.com.limegroup.gnutella.gui.mp3=ALL
@@ -140,7 +141,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
-log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
