Tests make more sense with new SelectionStrategy API and overhauled RandomDownloadStrategy

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -118,8 +118,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.RandomDownloadStrategy=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.BiasedRandomDownloadStrategy=ALL
+log4j.logger.com.limegroup.gnutella.downloader.RandomDownloadStrategy=ALL
+log4j.logger.com.limegroup.gnutella.downloader.BiasedRandomDownloadStrategy=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
