--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -118,6 +118,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
+log4j.logger.com.limegroup.gnutella.downloader.RandomDownloadStrategy=ALL
+log4j.logger.com.limegroup.gnutella.downloader.BiasedRandomDownloadStrategy=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
@@ -126,7 +128,6 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.tigertree.HashTree=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.SavedFileManager=ALL
-#log4j.logger.com.limegroup.gnutella.FileManager=ALL
 #log4j.logger.com.limegroup.gnutella.RouterService=ALL
 #log4j.logger.com.limegroup.gnutella.gui.Initializer=ALL
 #log4j.logger.com.limegroup.gnutella.gui.mp3=ALL
@@ -135,15 +136,14 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.udpconnect=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
-log4j.logger.com.limegroup.gnutella.UDPService=ALL
+#log4j.logger.com.limegroup.gnutella.UDPService=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
-log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
-#log4j.logger.com.limegroup.gnutella.licenses=ALL
