FileManagerTest & MetaFileManagerTest now pass, fixed bugs test uncovered.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -135,15 +135,16 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.udpconnect=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
-log4j.logger.com.limegroup.gnutella.UDPService=ALL
+#log4j.logger.com.limegroup.gnutella.UDPService=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
-log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
 #log4j.logger.com.limegroup.gnutella.licenses=ALL
+#log4j.logger.com.limegroup.gnutella.FileManager=ALL
