--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -103,6 +103,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 # log4j.logger.httpclient.wire=ALL
 # will log all information read/written from/to the network using HttpClient
 
+log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.search.SearchResultHandler.level=DEBUG
 #log4j.logger.com.limegroup.gnutella.messages.vendor.HeadPong=All
 #log4j.logger.com.limegroup.gnutella.Connection=ALL
@@ -118,8 +120,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
-log4j.logger.com.limegroup.gnutella.downloader.RandomDownloadStrategy=ALL
-log4j.logger.com.limegroup.gnutella.downloader.BiasedRandomDownloadStrategy=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.RandomDownloadStrategy=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.BiasedRandomDownloadStrategy=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
