ensure DiscardCorrupt and KeepCorrupt tests work, make the difference between TestUploader.totalAmountUploaded and .fullRequestsUploaded more explicit

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -30,7 +30,7 @@ log4j.rootLogger=OFF, stdout, TextFile, XMLFile,socket
 log4j.appender.TextFile=org.apache.log4j.varia.NullAppender
 log4j.appender.TextFile=org.apache.log4j.RollingFileAppender
 log4j.appender.TextFile.File=log.txt
-log4j.appender.TextFile.MaxFileSize=50MB
+log4j.appender.TextFile.MaxFileSize=5000MB
 log4j.appender.TextFile.MaxBackupIndex=5
 log4j.appender.TextFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.TextFile.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
@@ -46,13 +46,13 @@ log4j.appender.TextFile.ImmediateFlush=true
 # to disable this type of logging do the oppposite.
 
 log4j.appender.XMLFile=org.apache.log4j.varia.NullAppender
-log4j.appender.XMLFile=org.apache.log4j.RollingFileAppender
-log4j.appender.XMLFile.File=log.xml
-log4j.appender.XMLFile.MaxFileSize=100MB
-log4j.appender.XMLFile.MaxBackupIndex=5
-log4j.appender.XMLFile.layout=org.apache.log4j.xml.XMLLayout
-log4j.appender.XMLFile.layout.LocationInfo=true
-log4j.appender.XMLFile.ImmediateFlush=false
+#log4j.appender.XMLFile=org.apache.log4j.RollingFileAppender
+#log4j.appender.XMLFile.File=log.xml
+#log4j.appender.XMLFile.MaxFileSize=100MB
+#log4j.appender.XMLFile.MaxBackupIndex=5
+#log4j.appender.XMLFile.layout=org.apache.log4j.xml.XMLLayout
+#log4j.appender.XMLFile.layout.LocationInfo=true
+#log4j.appender.XMLFile.ImmediateFlush=false
 #####
 
 
@@ -73,10 +73,11 @@ log4j.appender.socket=org.apache.log4j.varia.NullAppender
 #########
 
 # stdout is set to be ConsoleAppender sending its output to System.out
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout=org.apache.log4j.varia.NullAppender
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 
 # stdout uses PatternLayout.
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # The conversion pattern is:
 # time elapsed since start of logging (left justified, pads extra spaces if less than 0)
@@ -86,7 +87,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # - message
 # newline
 
-log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 
 
 ###  To set the value for specific classes/packages, use the following format:
@@ -128,7 +129,7 @@ log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.dime=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree.HashTree=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
+log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.SavedFileManager=ALL
 #log4j.logger.com.limegroup.gnutella.RouterService=ALL
 #log4j.logger.com.limegroup.gnutella.gui.Initializer=ALL
@@ -139,12 +140,12 @@ log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
+log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
