--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -104,8 +104,8 @@ log4j.appender.stdout=org.apache.log4j.varia.NullAppender
 # log4j.logger.httpclient.wire=ALL
 # will log all information read/written from/to the network using HttpClient
 
-log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
-log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.search.SearchResultHandler.level=DEBUG
 #log4j.logger.com.limegroup.gnutella.messages.vendor.HeadPong=All
 #log4j.logger.com.limegroup.gnutella.Connection=ALL
@@ -129,7 +129,7 @@ log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.dime=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree.HashTree=ALL
-log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.SavedFileManager=ALL
 #log4j.logger.com.limegroup.gnutella.RouterService=ALL
 #log4j.logger.com.limegroup.gnutella.gui.Initializer=ALL
@@ -140,12 +140,12 @@ log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
-log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
-log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
