--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -28,13 +28,13 @@ log4j.rootLogger=OFF, stdout, TextFile, XMLFile,socket
 # to disable this type of logging do the oppposite.
 
 log4j.appender.TextFile=org.apache.log4j.varia.NullAppender
-log4j.appender.TextFile=org.apache.log4j.RollingFileAppender
-log4j.appender.TextFile.File=log.txt
-log4j.appender.TextFile.MaxFileSize=5000MB
-log4j.appender.TextFile.MaxBackupIndex=5
-log4j.appender.TextFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.TextFile.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
-log4j.appender.TextFile.ImmediateFlush=true
+#log4j.appender.TextFile=org.apache.log4j.RollingFileAppender
+#log4j.appender.TextFile.File=log.txt
+#log4j.appender.TextFile.MaxFileSize=5000MB
+#log4j.appender.TextFile.MaxBackupIndex=5
+#log4j.appender.TextFile.layout=org.apache.log4j.PatternLayout
+#log4j.appender.TextFile.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
+#log4j.appender.TextFile.ImmediateFlush=true
 ########
 
 
@@ -73,11 +73,11 @@ log4j.appender.socket=org.apache.log4j.varia.NullAppender
 #########
 
 # stdout is set to be ConsoleAppender sending its output to System.out
-log4j.appender.stdout=org.apache.log4j.varia.NullAppender
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout=org.apache.log4j.varia.NullAppender
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 
 # stdout uses PatternLayout.
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # The conversion pattern is:
 # time elapsed since start of logging (left justified, pads extra spaces if less than 0)
@@ -87,7 +87,7 @@ log4j.appender.stdout=org.apache.log4j.varia.NullAppender
 # - message
 # newline
 
-#log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 
 
 ###  To set the value for specific classes/packages, use the following format:
@@ -150,3 +150,6 @@ log4j.appender.stdout=org.apache.log4j.varia.NullAppender
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
+#log4j.logger.httpclient.wire=ALL
+#log4j.logger.org.apache.commons.httpclient=ALL
+#log4j.logger.com.limegroup.gnutella.http=ALL
