Fix a few TipOfTheDay strings

--- a/lib/messagebundles/totd/TOTD.properties
+++ b/lib/messagebundles/totd/TOTD.properties
@@ -18,7 +18,7 @@ GENERAL_9=You can find out how many times someone has uploaded a file by choosin
 GENERAL_10=Curious how many people are searching for your files? The 'hits' column in the Library will count how many times LimeWire has returned a result from someone searching for that file.
 GENERAL_11=It helps the network if you keep your LimeWire running. Others will connect to the network easier and searches will perform better.
 GENERAL_12=Looking for something rare? The more detailed your search is, the better your chances of getting a result you want!
-GENERAL_13=Want to open this Tip Of The Day dialog after you've closed it? Go to the Help menu and choose 'Tip of The Day'.
+GENERAL_13=Want to open this Tip Of The Day dialog after you've closed it? Go to the Help menu and choose 'Tip of the Day'.
 GENERAL_14=LimeWire displays the speed and location of the host who returned a search result. Speeds that are green mean that LimeWire was able to verify the speed is correct. Locations that are red mean the host is firewalled. Choosing results with green speeds and black locations is your best bet for a good download.
 GENERAL_15=When LimeWire says your download is "Waiting In Line," that means that source you are downloading from is temporarily busy and has queued your download. In order to successfully complete your download, wait while your request advances in line and is eventually serviced.
 GENERAL_16=Need more help? Visit <a href="http://www.limewire.com/forum.htm">our message boards</a> and see if others have already answered your question! You can also review the <a href="http://www.limewire.com/faq">FAQ</a> for answers to commonly asked questions or the <a href="http://www.limewire.com/userguide">User Guide</a> for more information.
@@ -30,13 +30,13 @@ GENERAL_21=You can restart downloads that say 'Awaiting Sources' by searching fo
 GENERAL_22=Do you have a cool feature you'd like to see added to LimeWire? Suggest it on LimeWire's <a href="http://www.limewire.com/forum.htm">message boards</a> and it may be added to future versions!
 GENERAL_23=You can make your own LimeWire skins! Visit <a href="http://www.limewire.com/english/content/makeskins.shtml">LimeWire's website</a> for detailed information about how skins are created.
 GENERAL_24=Want to know more about the development of LimeWire? Visit <a href="http://www.limewire.org">LimeWire's open-source website</a> and look around!
-GENERAL_25=You can preview downloaded files to make sure they're what you expect. Just select the download and click launch!
+GENERAL_25=You can preview downloaded files to make sure they're what you expect. Just select the download and click 'Preview'!
 #GENERAL_26 unused -- migrated to OSX & NOT_OSX.
 GENERAL_27=Curious what hosts LimeWire is connecting or connected to? Enable the Connections tab from View -> Show/Hide, and take a look at LimeWire's connections.
-GENERAL_28=You can chat other people who are running LimeWire. Choose any download or search result that has a smiley in the Chat column and then click Chat.
-GENERAL_29=Sometimes the 'search' button is disabled. This happens when LimeWire is not connected to any other hosts. Choose File -> Connect and wait for the bar in the bottom-left corner to fill up.
+GENERAL_28=You can chat with other people who are running LimeWire. Choose any download or search result that has a smiley in the Chat column and then click 'Chat'.
+GENERAL_29=Sometimes the 'Search' button is disabled. This happens when LimeWire is not connected to any other hosts. Choose File -> Connect and wait for the bar in the bottom-left corner to fill up.
 GENERAL_30=Passionate about digital rights? Visit the <a href="http://www.limewire.com/eff">Electronic Frontier Foundation</a> and see what you can do to help.
-GENERAL_31=LimeWire is translated into dozens of <a href="http://www.limewire.com/english/content/international.shtml">different languages</a> including Chinese, French, German, Japanese, Italian, Spanish and many many more. Visit LimeWire's <a href="http://www.limewire.org/translate.shtml">internationalization page</a> for information on how you can help translation efforts!
+GENERAL_31=LimeWire is translated into dozens of <a href="http://www.limewire.com/english/content/international.shtml">different languages</a> including Chinese, French, German, Japanese, Italian, Spanish and many more. Visit LimeWire's <a href="http://www.limewire.org/translate.shtml">internationalization page</a> for information on how you can help translation efforts!
 GENERAL_32=Can't find files you've downloaded? Try doing a search on your computer for the filename. LimeWire will only list files that are being shared or are incomplete within its Library, so if your Save directory isn't shared, LimeWire won't display it.
 GENERAL_33=Sport the LimeWire look! Visit our <a href="http://www.limewire.com/english/content/gear.shtml">LimeWire gear</a> page and purchase a t-shirt or hat! 
 GENERAL_34=Want to publish your own content? <a href="http://www.magnetmix.com">LimeWire's MagnetMix</a> offers independent artists, shareware games, software distributors and more a way to reach large audiences. <a href="http://www.magnetmix.com/form.html">Submit your content</a> today!
@@ -48,7 +48,7 @@ GENERAL_36=Don't know what to look for? Try a "What's New" search and see what's
 #####################################################################################
 NOT_OSX_1=Are you using a router? Be sure to use 'port forwarding' so that other people can make incoming connections to your computer! You can configure LimeWire to be aware of port forwarding by choosing:<br>Tools -> Options -> Advanced:Port/Firewalls.<br>Review your router's configuration to set it up correctly.
 NOT_OSX_2=You can customize LimeWire to your heart's content by changing various preferences such as your Save Directory, Shared Directory, Upload Bandwidth, etc... These preferences (and more) are available at the Tools -> Options menu.
-NOT_OSX_3=You can find out which version of LimeWire you are using by choosing 'About' from the Help menu.
+NOT_OSX_3=You can find out which version of LimeWire you are using by choosing 'About LimeWire' from the Help menu.
 NOT_OSX_4=Be a good network participant, don't close LimeWire if someone is uploading from you. You can tell LimeWire to automatically close after all downloads and uploads are complete by going to Tools -> Options and looking at the 'Shutdown' options.
 NOT_OSX_5=LimeWire does not automatically share all types of files. If you have a specific file you'd like to share, make sure its extension is being shared. This can be done via Tools -> Options and altering the 'Sharing' options.
 NOT_OSX_6=Frequently see 'Could Not Move To Library' on downloads? You can fix this by making sure a valid save directory exists in Tools -> Options, Saving.
@@ -68,7 +68,7 @@ OSX_1=LimeWire is written in Java, which means that having the latest version of
 OSX_2=Tired of the OSX Aqua look? Try using a new theme, available from the View -> Apply Themes menu.
 OSX_3=Are you using a router? Be sure to use 'port forwarding' so that other people can make incoming connections to your computer! You can configure LimeWire to be aware of port forwarding by choosing:<br>LimeWire -> Preferences -> Advanced: Port/Firewalls.<br>Review your router's configuration to set it up correctly.
 OSX_4=You can customize LimeWire to your heart's content by changing various preferences such as your Save Directory, Shared Directory, Upload Bandwidth, etc... These preferences (and more) are available at the LimeWire -> Preferences menu.
-OSX_5=You can find out which version of LimeWire you are using by choosing 'About' from the LimeWire menu.
+OSX_5=You can find out which version of LimeWire you are using by choosing 'About LimeWire' from the LimeWire menu.
 OSX_6=Be a good network participant, don't close LimeWire if someone is uploading from you. You can tell LimeWire to automatically close after all downloads and uploads are complete by going to LimeWire -> Preferences and looking at the 'Shutdown' options.
 OSX_7=LimeWire does not automatically share all types of files. If you have a specific file you'd like to share, make sure its extension is being shared. This can be done via LimeWire -> Preferences and altering the 'Sharing' options.
 OSX_8=Frequently see 'Could Not Move To Library' on downloads? You can fix this by making sure a valid save directory exists in LimeWire -> Preferences, Saving and reducing the amount of files you're trying to download at one time.
